# FunctionBASIC

./: .gitignore  HANDOFF.md  README.md  TODO.md  build.mjs  package.json  serve.mjs
docs/: 00-msx-basic-diff.en.md  00-msx-basic-diff.md  01-language-spec.md  02-architecture.md  03-lexer-parser.md  04-data-model.md  05-transformer.md  06-reverse-transformer.md  07-editor-ui.md  08-file-save.md  09-optimization.md  10-tech-stack.md  11-editor-features.md  12-builtins.md  13-style-guide.md  14-external-file-sync.md  NOTE-array-ref-passing.md  README.md
editor/: app.js  index.html  style.css
examples/: asm-demo.msxb  cat-sprite.msxb  event-traps.msxb  msx-music-fm.msxb  msx2-coverage.msxb  msx2-graphics-sound.msxb  msx2-lib-demo.msxb  msx2-lib-graphics.msxb  msx2-lib-hello.msxb  msx2-lib-palette.msxb  msx2-text-format.msxb  recursion.msxb  runner-turbor.msxb  space-shooter-turbor.msxb  strict-demo.msxb  turbo-r.msxb
scripts/: eval-reverse.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sav.rs
test/: basic-reader.test.ts  check-names.test.ts  const.test.ts  cookbook-coverage.test.ts  dataset.test.ts  decompile.test.ts  detect.test.ts  disasm.test.ts  do-loop.test.ts  elseif.test.ts  event.test.ts  examples.test.ts  fold.test.ts  format.test.ts  lexer.test.ts  line-numbering.test.ts  macro.test.ts  name-registry.test.ts  option-explicit.test.ts  pack-lines.test.ts  parser.test.ts  preprocess.test.ts  provenance.test.ts  recursion.test.ts  rename-vars.test.ts  (+12 more)
(+53 files in other folders)
