[package]
name = "functionbasic-editor"
version = "0.1.0"
description = "構造化BASIC エディタ（MSX-BASIC 変換）"
edition = "2021"
rust-version = "1.77"

[lib]
name = "functionbasic_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
notify = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
